sumo/tests/traci/ChangeTarget/InvalidNodeId/options.traci
sumo.exe --no-step-log --net-file net.net.xml --route-files routes.rou.xml --penetration 1.0 --remote-port 8817 --netstate-dump netstate_dump.xml TraCITestClient.exe -def changetarget_invalidnode.prog -p 8817 -h localhost -o testclient_out.txt